# politocean_web_purchase_utility

./: .gitignore  Cargo.toml  README.md  digikey_response_pretty.json
migrations/: 20250414180735_create_initial_schema.sql  20250414183035_create_users.sql  20250414204305_init_users_credential.sql  20250419160933_create_users.sql  20251027184610_update_users_october_2025_26.sql  20251027193357_change_advisors_privilege.sql  20251028120300_password_reset.sql  20251028124307_unique_user_token.sql  20251028190725_add_comunication_area.sql
src/: init.rs  lib.rs  main.rs  routes.rs
src/data/: digikey_apis.rs  errors.rs  excel.rs  item.rs  mod.rs  mouser_apis.rs  order.rs  user.rs
src/handlers/: advisors_homepage.rs  auth.rs  board_homepage.rs  edit_order.rs  mod.rs  new_order.rs  order_operations.rs  password_reset.rs  prof_homepage.rs  user_settings.rs
src/middlewares/: auth.rs
src/models/: app.rs  digikey_api_models.rs  item.rs  mod.rs  mouser_api_models.rs  new_order_form_model.rs  order_operations.rs  password_reset.rs  templates.rs  user_form_model.rs  user_info.rs
static/css/: advisors_homepage.css  base.css  coffee.css  edit_order.css  global.css  login.css  new_order.css  order_arithmetic.css  palette.css  user_settings.css
static/js/: edit_order.js  new_order.js  order_arithmetic.js
style_chatgpt/: advisors_homepage.html  edit_order.html  login.html
style_chatgpt/css/: edit_order.css  global.css  login.css  new_order.css
style_chatgpt/pages/: new_order.html
templates/pages/: advisors_homepage.html  base.html  board_homepage.html  coffee.html  (+7 more)
