[package]
name = "politocean_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9"
tower-http ={ version = "0.5.2", features = ["fs", "trace"]}
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
bcrypt = "0.15"
umya-spreadsheet = "1.0"
dotenvy = "0.15.7"
tower-sessions = { version = "0.13.0"}
tower-sessions-sqlx-store = {version = "0.14.0", features = ["postgres"]}
time = "0.3.36"
chrono = {version = "0.4.38", features = ["serde"]}
thiserror = "1.0.63"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0"
percent-encoding = "2.3"
zip = "0.6"
serde_path_to_error = "0.1.12"
futures = "0.3"
once_cell="1"